wormhole send works (first test)